# crux-play

./: .gitignore  Cargo.toml  deny.toml  justfile  package-lock.json  rust-toolchain.toml
.devcontainer/: initialize.sh
.github/workflows/: ci-docker.yml  ci-rust.yml  ci-web.yml  continuous-integration.yml
crates/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: app.rs  ffi.rs  lib.rs
crates/simple_counter/: Cargo.toml
examples/simple_counter/web-svelte/: Justfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
examples/simple_counter/web-svelte/src/lib/: core.ts
examples/simple_counter/web-svelte/src/routes/: +page.svelte
images/ci/: Dockerfile  binstall-versions.json
web/: .gitignore  .prettierrc  Justfile  eslint.config.js  justfile  package-lock.json  package.json  script.sh  svelte.config.js  vite.config.ts
web/src/lib/: core.ts
web/src/routes/: +page.svelte
xtask/: Cargo.toml
xtask/src/: main.rs
