[package]
name = "xtask"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
xshell = "0.2"
crux_core = { version = "0.17.0-rc2", features = ["facet_typegen"] }
shared = { path = "../crates/shared", features = ["facet_typegen"] }
