[package]
name = "shared"
version.workspace = true

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[features]
uniffi = ["dep:uniffi"]
wasm_bindgen = ["dep:wasm-bindgen", "getrandom/wasm_js"]
facet_typegen = ["crux_core/facet_typegen"]

[dependencies]
crux_core = { version = "0.17.0-rc3" }
facet = "0.31"
getrandom = { version = "0.3.4", optional = true, default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
uniffi = { version = "=0.29.4", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
